fix: padding not working on small screen

--- a/styles/CardsArea.module.css
+++ b/styles/CardsArea.module.css
@@ -16,7 +16,6 @@
     align-items: center;
     width: 600px;
     height: 100px;
-    padding: 16px 5px 25px 10px;
     margin: 20px 10px;
     border: 4px solid #fff;
     font-weight: bolder;
